# ROSHAN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agent.h  engine_bindings.cpp  engine_core.cpp  engine_core.h  main.cpp  model_interface.h  python_bindings.cpp  utils.cpp  utils.h
CORINE/: dataset_handler.cpp  dataset_handler.h
agent/: drone.cpp  drone.h  drone_action.h  drone_action_bindings.cpp  drone_agent.cpp  drone_agent.h  drone_state.cpp  drone_state.h  drone_state_bindings.cpp  memory.cpp  memory.h
agent/FireSimAgent/: agent.py  main.py  memory.py  network.py  ppo.py  utils.py
agent/rendering/: DroneRenderer.cpp  DroneRenderer.h
browser_window/: cefsimple_linux.cpp  pups.h  simple_app.cpp  simple_handler.cpp
drone_agent/: drone.cpp  drone.h  drone_action.h  drone_state.cpp  drone_state.h
drone_agent/FireSimAgent/: agent.py  main.py  memory.py  network.py  ppo.py  td3.py  utils.py
models/gameoflife/: gameoflife_infinite.cpp  gameoflife_infinite.h  gameoflife_infinite_renderer.cpp  gameoflife_infinite_renderer.h  gameoflife_types.h
models/gameoflife_simple/: gameoflife_fixed.cpp  gameoflife_fixed.h  gameoflife_fixed_renderer.cpp  gameoflife_fixed_renderer.h
models/stochasticlagrangian/: firemodel.cpp  firemodel.h  firemodel_cell_interface.h  firemodel_datastructure.cpp  firemodel_datastructure.h  firemodel_firecell.cpp  firemodel_firecell.h  firemodel_gridmap.cpp  firemodel_gridmap.h  firemodel_renderer.cpp  firemodel_renderer.h  model_parameters.cpp  model_parameters.h  radiation_particle.cpp  radiation_particle.h  utils.cpp  utils.h  virtual_particle.cpp  virtual_particle.h  wind.cpp  wind.h
models/stochasticlagrangian/cell_classes/: cell_generic_burned.cpp  cell_generic_burning.cpp  cell_generic_flooded.cpp  cell_generic_unburned.cpp  cell_lichens_and_mosses.cpp  cell_low_growing_woody_plants.cpp  cell_non_and_sparsley_vegetated.cpp  cell_outside_area.cpp  cell_periodically_herbaceous.cpp  cell_permanent_herbaceous.cpp  cell_sealed.cpp  cell_snow_and_ice.cpp  cell_water.cpp  cell_woody_breadleaved_deciduous_trees.cpp  cell_woody_broadleaved_evergreen_trees.cpp  cell_woody_needle_leaved_trees.cpp
models/stochasticlagrangian/particles/: virtual_particle.cpp  virtual_particle.h
models/stochasticlagrangian/rendering/: firemodel_camera.cpp  firemodel_camera.h  firemodel_renderer.cpp  firemodel_renderer.h
openstreetmap/public/: map.html
